--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
-
+use_frameworks!
 target 'HaidoraProgressHUDManager_Example', :exclusive => true do
   pod "HaidoraProgressHUDManager", :path => "../"
 end
